parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@indentation.py-2.snap
---
source: parser/src/lexer/lexer.rs
description: "# Unindent does not match any outer indentation level\nif True:\n        pass\n    pass\n"
input_file: parser/test_data/inputs/indentation.py
---
[
    InvalidSyntax {
        msg: "Invalid indentation",
        line: 4,
        input: "",
        advice: "Invalid indentation, the current indentation is less than previous one",
        span: (
            79,
            80,
        ),
    },
]
