parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@indentation.py.snap
---
source: parser/src/lexer/lexer.rs
description: "# Unindent does not match any outer indentation level\nif True:\n        pass\n    pass\n"
input_file: parser/test_data/inputs/indentation.py
---
[
    Token {
        kind: Comment,
        value: Str(
            "# Unindent does not match any outer indentation level",
        ),
        start: 0,
        end: 53,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 53,
        end: 54,
    },
    Token {
        kind: If,
        value: None,
        start: 54,
        end: 56,
    },
    Token {
        kind: True,
        value: None,
        start: 57,
        end: 61,
    },
    Token {
        kind: Colon,
        value: None,
        start: 61,
        end: 62,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 62,
        end: 63,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 63,
        end: 71,
    },
    Token {
        kind: Pass,
        value: None,
        start: 71,
        end: 75,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 75,
        end: 76,
    },
    Token {
        kind: Error,
        value: Str(
            "Unindent does not match any outer indentation level",
        ),
        start: 76,
        end: 80,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 80,
        end: 80,
    },
    Token {
        kind: Pass,
        value: None,
        start: 80,
        end: 84,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 84,
        end: 85,
    },
]
